--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,9 @@ html {
 
 :root {
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --mobile: 480px;
+  --tablet: 768px;
+  --desktop: 1366px;
 }
 
 .visually-hidden {
@@ -79,6 +82,15 @@ html {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+main {
+  /* flex-grow: 1; */
+  flex: 1 0 auto;
+}
+
+footer {
+  flex-shrink: 0;
 }
 
 input {
