--- a/src/index.css
+++ b/src/index.css
@@ -66,9 +66,10 @@ html {
 
 :root {
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  --mobile: 480px;
+  --breckPoint: 767px;
+  /* --mobile: 480px;
   --tablet: 768px;
-  --desktop: 1366px;
+  --desktop: 1366px; */
 }
 
 .visually-hidden {
@@ -84,10 +85,10 @@ html {
   overflow: hidden;
 }
 
-main {
-  /* flex-grow: 1; */
+/* main {
+  flex-grow: 1;
   flex: 1 0 auto;
-}
+} */
 
 footer {
   flex-shrink: 0;
